# yahtzee

./: CMakeLists.txt  README.md
inc/: dice.h  diceContainer.h  gameEngine.h  player.h  textBox.h
src/: dice.cpp  diceContainer.cpp  gameEngine.cpp  main.cpp  player.cpp
